--- a/menu.css
+++ b/menu.css
@@ -18,13 +18,23 @@ header{
 
 .conteudo1{
     float: right;
-}
-*/
+} 
+
+teste que estava sendo executado.
+
 .conteudo{
     background-color: blue;
     width: 100px;
     height: 50px;
 }
+
+a classe conteudo quando esta em dimensão maior que 800px
+esta com a cor azul, quando não esta muda de cor para violeta
+cod: #001
+
+SERA RETIRADA TODAS  AS FUNCIONALIDADES DO BOTÂO PARA APARECER 
+O MENU PRINCIPAL.
+*/
 
 .menu{
     width: 100%;
@@ -39,7 +49,7 @@ header{
 }
 
 .menu ul li{
-    width: 150px;
+    width: 100px;
     float: left;
 }
 
@@ -67,14 +77,16 @@ header{
 }
 
 .menu ul ul li{
-    float: none;
+    width: 80%;
+    float: left;
     border-bottom: solid 1px #ccc;
 }
 
 .menu ul ul li a{
-    background-color: #069;
+    background-color: #222;
 }
 
+*/
 label[for="bt_menu"]{
     padding: 5px;
     background-color: #222;
@@ -86,7 +98,7 @@ label[for="bt_menu"]{
     width: 50px;
     height: 50px;
 }
-
+/*
 #bt_menu{
     display: none;
 }
@@ -94,6 +106,7 @@ label[for="bt_menu"]{
 label[for="bt_menu"]{
     display: none;
 }
+*/
 
 #cabecalho{
     text-align: center;
@@ -101,18 +114,22 @@ label[for="bt_menu"]{
 
 @media(max-width: 800px){
     .menu ul li{
-        width: 100%;
+        width: 75%;
         float: none;
+        margin: auto;
     }
-
+    /*
     #bt_menu:checked ~ .menu{
         margin-left: 0;
     }
-
+    */
     .menu{
         margin-top: 5px;
-        margin-left: -100%;
+        height: 0;
+        /*
+        margin-left: -100px;
         transition: all .4s;
+        */
     }
 
     .menu ul ul{
@@ -124,16 +141,20 @@ label[for="bt_menu"]{
 
     .menu ul li:hover ul{
         height: auto;
-        max-height: 200px;
+        min-height: 100px;
     }
-    
+    /*
     label[for="bt_menu"]{
         display: block;
 
     }
-
+    
     .conteudo{
         background-color: blueviolet;
     }
+
+    cod: #001
+    
+    */
 }
 
