--- a/menu.css
+++ b/menu.css
@@ -3,40 +3,14 @@
     padding: 0;
 }
 
-/*
 header{
     width: 900px;
     margin:auto;
-    background-color: blueviolet;
     height: 50px;
 }
-.conteudo{
-    background-color: blue;
-    width: 100px;
-    height: 50px;
-}
-
-.conteudo1{
-    float: right;
-} 
-
-teste que estava sendo executado.
-
-.conteudo{
-    background-color: blue;
-    width: 100px;
-    height: 50px;
-}
-
-a classe conteudo quando esta em dimensão maior que 800px
-esta com a cor azul, quando não esta muda de cor para violeta
-cod: #001
-
-SERA RETIRADA TODAS  AS FUNCIONALIDADES DO BOTÂO PARA APARECER 
-O MENU PRINCIPAL.
-*/
 
 .menu{
+    margin-top: 5px;
     width: 100%;
     height: 50px;
     background-color: #222;
@@ -49,7 +23,7 @@ O MENU PRINCIPAL.
 }
 
 .menu ul li{
-    width: 100px;
+    width: 300px;
     float: left;
 }
 
@@ -86,7 +60,6 @@ O MENU PRINCIPAL.
     background-color: #222;
 }
 
-*/
 label[for="bt_menu"]{
     padding: 5px;
     background-color: #222;
@@ -98,38 +71,25 @@ label[for="bt_menu"]{
     width: 50px;
     height: 50px;
 }
-/*
-#bt_menu{
-    display: none;
-}
-
-label[for="bt_menu"]{
-    display: none;
-}
-*/
 
 #cabecalho{
     text-align: center;
 }
 
 @media(max-width: 800px){
+    header{
+        width: 100%;
+        height: 145px;
+    }
     .menu ul li{
         width: 75%;
         float: none;
         margin: auto;
     }
-    /*
-    #bt_menu:checked ~ .menu{
-        margin-left: 0;
-    }
-    */
+
     .menu{
         margin-top: 5px;
         height: 0;
-        /*
-        margin-left: -100px;
-        transition: all .4s;
-        */
     }
 
     .menu ul ul{
@@ -143,18 +103,5 @@ label[for="bt_menu"]{
         height: auto;
         min-height: 100px;
     }
-    /*
-    label[for="bt_menu"]{
-        display: block;
-
-    }
-    
-    .conteudo{
-        background-color: blueviolet;
-    }
-
-    cod: #001
-    
-    */
 }
 
