--- a/menu.css
+++ b/menu.css
@@ -4,6 +4,7 @@
 }
 
 header{
+    position:relative;
     width: 900px;
     margin:auto;
     height: 50px;
@@ -51,13 +52,13 @@ header{
 }
 
 .menu ul ul li{
-    width: 80%;
+    width: 100%;
     float: left;
     border-bottom: solid 1px #ccc;
 }
 
 .menu ul ul li a{
-    background-color: #222;
+    background-color: #555;
 }
 
 label[for="bt_menu"]{
@@ -82,7 +83,7 @@ label[for="bt_menu"]{
         height: 145px;
     }
     .menu ul li{
-        width: 75%;
+        width: 100%;
         float: none;
         margin: auto;
     }
@@ -101,7 +102,7 @@ label[for="bt_menu"]{
 
     .menu ul li:hover ul{
         height: auto;
-        min-height: 100px;
+        max-height: 150px;
     }
 }
 
