--- a/menu.css
+++ b/menu.css
@@ -33,7 +33,7 @@ header{
     display: block;
     text-decoration: none;
     text-align: center;
-    background-color: #222;
+    background-color: rgb(0, 0, 0);
     color: #fff;
 }
 
@@ -46,41 +46,31 @@ header{
     visibility: visible;
 }
 
-.menu a:hover{
-    background-color: #f4f4f4;
-    color: #555;
+.menu ul ul a:hover{
+    visibility: visible;
+    font-size: 25px;
 }
 
-.menu ul ul li{
-    width: 100%;
-    float: left;
+.menu a:hover ul ul li{
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
+    
+}
+
+.menu ul ul li{ 
+    float: none;
     border-bottom: solid 1px #ccc;
 }
 
 .menu ul ul li a{
-    background-color: #555;
+    background-color: rgb(0, 0, 0);
 }
 
-label[for="bt_menu"]{
-    padding: 5px;
-    background-color: #222;
-    color: #fff;
-    font-family: 'Times new roman';
-    text-align: center;
-    font-size: 30px;
-    cursor: pointer;
-    width: 50px;
-    height: 50px;
-}
-
-#cabecalho{
-    text-align: center;
-}
 
 @media(max-width: 800px){
     header{
         width: 100%;
-        height: 145px;
+        height: 160px;
     }
     .menu ul li{
         width: 100%;
@@ -102,7 +92,7 @@ label[for="bt_menu"]{
 
     .menu ul li:hover ul{
         height: auto;
-        max-height: 150px;
+        max-height: 200px;
     }
 }
 
